[project]
name = "lantern-ai"
version = "0.1.0-dev"
description = "An AI-powered terminal companion for developers and system administrators."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
]

[project.scripts]
lantern = "lantern.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lantern"]